--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "headroom.js": "^0.12.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-easy-emoji": "1.5.0",
+    "react-lottie": "^1.2.3",
+    "reactstrap": "8.9.0"
   },
   "devDependencies": {
     "eslint": "8.8.0",
